# junk

./: .gitignore  .gitmodules
client_serv_hw/: passw.txt
client_serv_hw/auth/: authorize.php  find_file.php  recovery.php  secret_info.php  test.php
client_serv_hw/diag/: diag.php
client_serv_hw/lab5/: index.html  search.php
client_serv_hw/lab5_2/: auth.php  change_db.php  check_user.php  request.html  search.php
client_serv_hw/lab6/: hist.php  index.html
client_serv_hw/lab6/diag/: draw.php  load_config.php
client_serv_hw/labs/: hist1.php  index.html
client_serv_hw/labs/auth/: authorize.php  recovery.php
client_serv_hw/labs/diag/: config.php
client_serv_hw/labs/lab5_1/: search.php
client_serv_hw/labs/lab5_2/: change_db.php  edit.php  index.html  request.html  validation.php
client_serv_hw/my-app/: package-lock.json  package.json
client_serv_hw/my-app/src/: index.html  index.js  script.js
client_serv_hw/stat/: stat.php
dotnet/Lab01_MinimalApi/: Lab01_MinimalApi.csproj  Program.cs
dotnet/Lab01_MinimalApi/Properties/: launchSettings.json
dotnet/LoadTestApp/: Program.cs
dotnet/done/lab5/: DatabaseHelper.cs  students.db
dotnet/done/lab5_prev/: MvcReprApp.csproj
dotnet/hw/: BulletinBoard.csproj  Program.cs  list.txt  notes.db
dotnet/hw/Database/: DatabaseHelper.cs  NotesContext.cs
dotnet/hw/Login/: Login.cs
dotnet/hw/Models/: ActionLog.cs  Note.cs  User.cs
dotnet/hw/Pages/: ActionLog.cshtml  ActionLog.cshtml.cs  AddNote.cshtml  AddNote.cshtml.cs  AdminPanel.cshtml  AdminPanel.cshtml.cs  ChangePassword.cshtml  ChangePassword.cshtml.cs  EditNote.cshtml  EditNote.cshtml.cs  Error.cshtml.cs  ForgotPassword.cshtml  ForgotPassword.cshtml.cs  Index.cshtml  Index.cshtml.cs  MyNotes.cshtml  MyNotes.cshtml.cs  Notes.cshtml  Notes.cshtml.cs  Privacy.cshtml.cs  Register.cshtml  Register.cshtml.cs  _ViewImports.cshtml
dotnet/hw/Properties/: launchSettings.json
dotnet/lab10/: Program.cs  lab5.csproj  students.db
dotnet/lab10/Controllers/: StudentsController.cs
dotnet/lab10/Models/: Student.cs
dotnet/lab11/: MvcReprApp.csproj  Program.cs  products.db-shm  products.db-wal
dotnet/lab11/Controllers/: MyController.cs
dotnet/lab11/Models/: Product.cs
dotnet/lab13/: MvcReprApp.csproj  Program.cs  products.db  products.db-shm  products.db-wal
dotnet/lab13/Controllers/: ProductsController.cs
dotnet/lab13/Database/: DatabaseHelper.cs
dotnet/lab13/Login/: login.cs
dotnet/lab13/Models/: ErrorViewModel.cs
dotnet/lab13/Properties/: launchSettings.json
dotnet/lab14/: Program.cs  lab14.csproj  students.db  students.db-shm  students.db-wal
dotnet/lab14/Controllers/: StudentsController.cs
dotnet/lab14/Database/: DatabaseHelper.cs
dotnet/lab14/Models/: Student.cs
dotnet/lab15/: App.razor  Program.cs  _Imports.razor  lab15.csproj  products.db-shm  products.db-wal
dotnet/lab3/: Program.cs
dotnet/lab5/: lab5.csproj
dotnet/lab5_prev/: DatabaseHelper.cs  products.db
dotnet/lab6/: Program.cs  lab5.http  students.db-shm  students.db-wal
dotnet/lab6_prev/: Program.cs  products.db-shm  products.db-wal
dotnet/lab7/: Program.cs  lab5.csproj  students.db
dotnet/lab9/: Program.cs  lab5.csproj  students.db
graphics/prac1/: CMakeLists.txt  calc.h  main.cpp  matrix.h  triangle.h  utils.h  vector.h
ml/lab1/: link
ml/lab2/: Untitled.ipynb
ml/lab4/: Untitled.ipynb
ml/lab8/: lab8.ipynb
mob/hw2/: CMakeLists.txt  main.cpp
mob/hw2/patches/: cpp-dotenv.patch  jwt-cpp.patch
mob/hw2/source/database/: db.cpp
mob/hw2/source/include/: db.h  jwt.h
mob/hw2/source/models_gen/: generate_models.py  models_config.json
mob/hw2/source/server/: endpoints.cpp  jwt.cpp
mob/hw2/source/utils/: exceptions.h  hash.h  json_verify.h  singleton.h
mob/lab7/: CMakeLists.txt  main.cpp
opt_client_serv/lab7/: client.py  requirements.txt  social_pb2.py  social_pb2_grpc.py
opt_client_serv/pr2/: regex.py
python/lab1/: 1_15.py  1_16.py  1_17.py  2_5.py  2_8.py  2_9.py  3_6.py  3_7.py  3_8.py
python/lab10/: app.py  data.py  test.py  views.py
python/lab2/: 1_11.py  1_15.py  1_6.py  1_7.py  2_14.py  2_15.py  2_16.py  3_12.py  3_13.py  3_14.py
python/lab3/: 1_15.py  1_16.py  1_17.py  2_6.py  2_9.py  3_7.py
python/lab4/: tic_tac_toe.py
python/lab5/: 1.py  10.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
python/lab6/: 1.py  2.py  4.py  5.py
python/lab7/: main.py
python/lab8/: main.py
python/lab9/: 9_1.py  9_2.py  m0.txt
trpo/: courses.json  groups.json  sessions.json  users.json
trpo/Application/: AttendanceService.cs
trpo/Domain/: HashHelper.cs
trpo/Presentation/: Program.cs
(+127 files in other folders)
